# CarDVLM

./: README.md  pyproject.toml
dataset/: CarDVLM_Dataset.json  Dataset_README.md
license/: NOTICE
llava/model/language_model/: llava_llama.py
