# Modified by Jahid Hasan for the CarDVLM project
# Date: 2025-09-08
# Based on original LLaVA project: https://github.com/haotian-liu/LLaVA


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.1",
    "torchvision==0.17.1",
    "transformers==4.39.3",
    "tokenizers==0.15.2",
    "sentencepiece==0.2.0",
    "shortuuid",
    "accelerate==0.27.2",
    "peft==0.10.0",
    "bitsandbytes==0.43.0",
    "pydantic==2.6.1",
    "markdown2[all]==2.4.12",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "gradio==4.28.3",
    "requests==2.31.0",
    "httpx==0.27.0",
    "uvicorn==0.29.0",
    "fastapi==0.110.0",
    "starlette==0.36.3",
    "einops==0.7.0",
    "einops-exts==0.0.4",
    "timm==0.9.16"
]

[project.optional-dependencies]
train = [
    "deepspeed==0.13.1",
    "ninja==1.11.1",
    "wandb==0.16.3"
]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
